# seremis_json

./: OSMPythonTools_test.py  geopy_test.py  geopy_test3_async.py  geopy_text2.py  main.py  nominati_test.py  osmnx_try.py  pyproject.toml  seremis.json
pydantic/: jsonseremis_model.py  jsonseremis_parser.py
pydantic_code/: jsonseremis_model.py  jsonseremis_parser.py
